# keyboard-shortcut-parser

./: Cargo.toml  license.md  readme.md  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs  parser.rs
src/platform/: linux.rs  mod.rs  windows.rs  x11.rs
