[package]
name = "keyboard-shortcut-parser"
version = "0.2.0"
description = "A library used to parse keyboard shortcut strings"
repository = "https://github.com/SirWindfield/keyboard-shortcut-parser"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
license = "MIT"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
nom = "6.0.0-alpha1"
serde = { version = "1.0.114", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = { version = "2.18.5" }
